ECA-1805: add caching of certificate profiles, configurable in cache.properties, default 1 second.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@9759 37aeb1de-b14b-0410-9a0e-82b28170d228